[project]
name = "agenticai-examples"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "langchain>=1.3.1",
    "langchain-classic>=1.0.7",
    "langchain-community>=0.4.1",
    "langchain-core>=1.4.0",
    "langchain-google-genai>=4.2.2",
    "langchain-ollama>=1.1.0",
    "langchain-openai>=1.2.1",
    "langchain-tavily>=0.2.18",
    "langgraph>=1.2.0",
    "langgraph-checkpoint-sqlite>=3.1.0",
    "ollama>=0.6.2",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
]
